--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "setup",
   "version": "1.0.0",
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015",
+      "es2016",
+      "es2017"
+    ]
   },
   "main": "index.js",
   "scripts": {
@@ -17,9 +21,14 @@
     "babel-loader": "^6.4.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.22.0",
+    "install": "^0.11.0",
+    "npm": "^5.8.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "sudo": "^1.0.3",
     "webpack": "^1.15.0",
     "webpack-dev-server": "^1.16.5"
   },
