--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "presets": [
       "es2015",
       "es2016",
-      "es2017"
+      "es2017",
+      "react"
     ]
   },
   "main": "index.js",
@@ -23,11 +24,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.22.0",
+    "babel-preset-react": "^6.24.1",
     "install": "^0.11.0",
     "npm": "^5.8.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^15.6.2",
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^15.6.2",
     "sudo": "^1.0.3",
     "webpack": "^1.15.0",
     "webpack-dev-server": "^1.16.5"
